# pzoom

./: .gitignore  .parity-baseline.json  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  DECLARATION_COLLECTOR_METHOD_MAP.md  LICENSE  PSALM_FILE_MAP.json  PSALM_HAKANA_MAPPING.md  README.md  composer.json  pzoom_psalm_audit.json
crates/pzoom-analyzer/: Cargo.toml
crates/pzoom-analyzer/src/: algebra_analyzer.rs  assertion_finder.rs  class_casing.rs  config.rs  context.rs  data_flow.rs  expr_analyzer.rs  expression_analyzer.rs  expression_identifier.rs  file_analyzer.rs  formula_generator.rs  function_analysis_data.rs  function_like_analyzer.rs  init_collector.rs  internal_access.rs  issue_suppression.rs  lib.rs  methods.rs  profiling.rs  psalm_baseline.rs  psalm_config.rs  statements_analyzer.rs  stmt_analyzer.rs  taint_analyzer.rs  type_coverage.rs  type_expander.rs  unused_symbols.rs  unused_variable_analyzer.rs
crates/pzoom-analyzer/src/docblock/: mod.rs  parse_tree.rs  parse_tree_creator.rs  parser.rs  type_parser.rs  type_tokenizer.rs
crates/pzoom-analyzer/src/expr/: array_access_analyzer.rs  array_analyzer.rs  assignment_analyzer.rs  binop_analyzer.rs  call_analyzer.rs  cast_analyzer.rs  clone_analyzer.rs  closure_analyzer.rs  const_fetch_analyzer.rs  echo_analyzer.rs  empty_analyzer.rs  exit_analyzer.rs  include_analyzer.rs  isset_analyzer.rs  match_analyzer.rs  mod.rs  output_constructs.rs  partial_application_analyzer.rs  print_analyzer.rs  ternary_analyzer.rs  throw_analyzer.rs  unop_analyzer.rs  variable_fetch_analyzer.rs  yield_analyzer.rs
crates/pzoom-analyzer/src/expr/assignment/: array_assignment_analyzer.rs  instance_property_assignment_analyzer.rs  mod.rs  static_property_assignment_analyzer.rs
crates/pzoom-analyzer/src/expr/binop/: and_analyzer.rs  arithmetic_analyzer.rs  arithmetic_op_analyzer.rs  coalesce_analyzer.rs  concat_analyzer.rs  mod.rs  non_comparison_op_analyzer.rs  or_analyzer.rs
crates/pzoom-analyzer/src/expr/call/: argument_analyzer.rs  arguments_analyzer.rs  array_function_arguments_analyzer.rs  array_multisort_analyzer.rs  atomic_method_call_analyzer.rs  atomic_static_call_analyzer.rs  callable_validation.rs  class_template_param_collector.rs  existing_atomic_method_call_analyzer.rs  existing_atomic_static_call_analyzer.rs  function_call_analyzer.rs  function_call_assertion_analyzer.rs  function_call_return_type_fetcher.rs  impure_functions_list.rs  instance_call_analyzer.rs  method_call_analyzer.rs  method_call_prohibition_analyzer.rs  method_call_purity_analyzer.rs  method_call_return_type_fetcher.rs  method_visibility_analyzer.rs  missing_method_call_handler.rs  mod.rs  named_function_call_handler.rs  new_analyzer.rs  (+1 more)
crates/pzoom-analyzer/src/params_provider/: mod.rs
crates/pzoom-analyzer/src/plugin/: mod.rs  phpunit.rs
crates/pzoom-analyzer/src/reconciler/: assertion_reconciler.rs  macros.rs  mod.rs  negated_assertion_reconciler.rs  simple_assertion_reconciler.rs  simple_negated_assertion_reconciler.rs
crates/pzoom-analyzer/src/return_type_provider/: mod.rs
crates/pzoom-analyzer/src/scope/: finally_scope.rs  if_conditional_scope.rs  if_scope.rs  loop_scope.rs  mod.rs  switch_scope.rs
crates/pzoom-analyzer/src/stmt/: attribute_analyzer.rs  break_analyzer.rs  class_analyzer.rs  continue_analyzer.rs  control_analyzer.rs  declare_analyzer.rs  do_analyzer.rs  echo_analyzer.rs  else_analyzer.rs  elseif_analyzer.rs  expression_stmt_analyzer.rs  for_analyzer.rs  foreach_analyzer.rs  function_analyzer.rs  global_analyzer.rs  if_analyzer.rs  if_conditional_analyzer.rs  if_else_analyzer.rs  interface_analyzer.rs  loop_analyzer.rs  mod.rs  return_analyzer.rs  scope_analyzer.rs  static_analyzer.rs  switch_analyzer.rs  switch_case_analyzer.rs  trait_analyzer.rs  try_analyzer.rs  unset_analyzer.rs  while_analyzer.rs
crates/pzoom-analyzer/src/template/: inferred_type_replacer.rs  mod.rs  standin_type_replacer.rs  template_map.rs
crates/pzoom-analyzer/src/type_comparator/: array_type_comparator.rs  atomic_type_comparator.rs  callable_type_comparator.rs  class_like_string_comparator.rs  generic_type_comparator.rs  integer_range_comparator.rs  keyed_array_comparator.rs  mod.rs  object_type_comparator.rs  scalar_type_comparator.rs  type_comparison_result.rs  union_type_comparator.rs
crates/pzoom-cli/: Cargo.toml
crates/pzoom-cli/src/: main.rs  shortcodes.rs
crates/pzoom-code-info/: Cargo.toml
crates/pzoom-code-info/src/: assertion.rs  attribute_info.rs  class_constant_info.rs  class_like_info.rs  class_type_alias.rs  code_location.rs  codebase_info.rs  file_info.rs  functionlike_info.rs  issue.rs  lib.rs  member_visibility.rs  method_identifier.rs  property_info.rs  runtime_constants.rs  symbol.rs  symbol_references.rs  t_atomic.rs  t_union.rs  type_resolution.rs  var_name.rs
crates/pzoom-code-info/src/algebra/: clause.rs  mod.rs
crates/pzoom-code-info/src/data_flow/: graph.rs  node.rs  path.rs  tainted_node.rs
crates/pzoom-code-info/src/ttype/: key_value_of.rs  mod.rs  type_combination.rs  type_combiner.rs  type_node.rs
crates/pzoom-orchestrator/: Cargo.toml
crates/pzoom-orchestrator/examples/: profile_startup.rs
crates/pzoom-orchestrator/src/: analyzer.rs  ast_differ.rs  cache.rs  callmap.rs  composer_autoload.rs  extensions.rs  lib.rs  populator.rs  scanner.rs
crates/pzoom-orchestrator/tests/: reconciler_test.rs
crates/pzoom-syntax/: Cargo.toml
crates/pzoom-syntax/src/: declaration_collector.rs  docblock.rs  lib.rs  name_resolver.rs  property_map.rs  type_resolver.rs
crates/pzoom-syntax/src/declaration_collector/: classlike_scanner.rs  functionlike_scanner.rs  initializer_summary.rs  mod.rs  simple_type_inferer.rs  taint_scanner.rs
crates/pzoom-syntax/src/docblock/: mod.rs  parse_tree.rs  parse_tree_creator.rs  parsed_docblock.rs  type_parser.rs  type_tokenizer.rs
crates/pzoom-syntax/tests/: type_combination.rs
crates/pzoom-test-runner/: Cargo.toml
crates/pzoom-test-runner/src/: main.rs
crates/pzoom-wasm/: Cargo.toml
crates/pzoom-wasm/src/: lib.rs
crates/pzoom-wasm/tests/: playground_smoke.cjs
(+7697 files in other folders)
