[package]
name = "pzoom-code-info"
description = "Type system and codebase data structures for pzoom"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pzoom-str.workspace = true
rustc-hash.workspace = true
compact_str.workspace = true
serde.workspace = true
indexmap.workspace = true
itertools.workspace = true
rand.workspace = true
