[package]
name = "pzoom-wasm"
description = "WebAssembly bindings for the pzoom playground"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pzoom-str.workspace = true
pzoom-syntax.workspace = true
pzoom-code-info.workspace = true
pzoom-analyzer.workspace = true
pzoom-orchestrator.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
bumpalo.workspace = true
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# rand (via pzoom-code-info) needs getrandom's JS backend in the browser;
# pairs with the `getrandom_backend="wasm_js"` cfg in .cargo/config.toml.
getrandom = { version = "0.3", features = ["wasm_js"] }

# wasm-opt is slow on a binary this large (embedded stubs + callmaps);
# gzip on the Pages CDN does the heavy lifting instead.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
